# SvgIcons

./: .gitignore  CMakeLists.txt  README.md  SvgIcon.html  SvgIcon.js
src/: configwidget.cpp  configwidget.h  iconview.cpp  iconview.h  main.cpp  mainwindow.cpp  mainwindow.h  packager.cpp  packager.h
src/module/: abstractmodule.h
src/module/ikonate/: ikonate.qrc  ikonatemodule.cpp  ikonatemodule.h
